methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:7: error: expected class or object definition
def fairecarré(){faireN(Color.red);avance();avance();faireZ(Color.blue);recule();recule();gauche();avance();avance();droite();faireZ(Color.yellow);avance();avance();faireN(Color.green);recule();recule();gauche();recule();recule();droite();}
^PatternPicture:9: error: expected class or object definition
def faire2carré(){fairecarré();for (i<-1 to 4){avance();}; fairecarré();for (i<-1 to 4){recule();};} 
^PatternPicture:11: error: Unmatched closing brace '}' ignored here
}
^